# Better-IUT-RCC-API

./: .env.example  .gitignore  Dockerfile  README.md  __main__.py  docker-compose.yml  pyproject.toml  requirements.txt  scalar.html
.github/workflows/: deployment.yaml
src/: app.py  config.py
src/components/: ratelimit.py  statistics.py
src/models/components/: __init__.py  theme.py
src/routes/: __init__.py
src/routes/betteriutrcc/: v1_betteriutrcc.py
src/routes/index/: index.py
src/routes/misc/: v1_misc.py
src/routes/service/: v1_service.py
src/utils/: logger.py
static/css/: container.css
templates/: crous.html  index.html
templates/fragments/: _analytics.html  _footer.html  _header.html  _meta.html  _script.html
themes/default/: metadata.json
themes/default-light/: metadata.json  style.css
themes/justin-farm/: metadata.json  style.css
themes/original/: metadata.json
themes/rose-pine/: metadata.json  style.css
themes/valorant/: metadata.json  style.css
