[project]
name = "better-iut-rcc-api"
version = "1.1.0"
description = "Better IUT RCC API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.6",
    "prometheus-client>=0.25.0",
    "python-dotenv>=1.1.1",
    "pytz>=2026.2",
    "sanic>=25.12.1",
    "sanic-ext",
]

[tool.uv.sources]
sanic-ext = { git = "https://github.com/PaulBayfield/sanic-ext" }
